# support-ticket-env

./: .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  fix_metadata.py  fix_readme.py  get_baseline.py  graders.py  gradio_ui.py  inference.py  make_chart.py  models.py  openenv.yaml  plot_results.py  plot_reward_curve.py  pyproject.toml  run_tests.py  tickets.py  train_grpo.ipynb  train_grpo_safe.ipynb  train_sft.ipynb
openenv_stub/openenv/core/: __init__.py  env_client.py
openenv_stub/openenv/core/env_server/: http_server.py  interfaces.py  types.py
server/: __init__.py  app.py  requirements.txt  support_environment.py
tests/: conftest.py  test_environment.py  test_graders.py
