[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "support-ticket-env"
version = "1.0.0"
description = "Customer Support Ticket Resolution — OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openenv-core>=0.2.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "httpx"]

[project.scripts]
server = "support_ticket_env.server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["support_ticket_env*"]
